# toki-musume

./: README.md  dev.bat  index.html  live2d.html  package.json  pnpm-lock.yaml  vite.config.ts
.codex/: config.toml
.trellis/: .template-hashes.json
.zcode/plans/: plan-sess_71d29d70-9a0a-4d1a-9e1f-2d8b7b731213.md
src/: App.vue  config.test.ts  config.ts  controller.test.ts  controller.ts  live2d-main.ts  scheduler.ts  tauri-bridge.test.ts  tauri-bridge.ts  types.test.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  build.bat  tauri.conf.json  test-cc.bat
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  storage.rs  winapi.rs
src/companion/: arbiter.test.ts  arbiter.ts  triggers.ts
src/components/: ChatPanel.vue  DebugPanel.vue  HistoryView.vue  Live2DCanvas.vue  MessageInput.vue  PomodoroTimer.vue  SettingsPanel.vue  StatusBar.vue  TaskList.vue  TodaySummary.vue
src/composables/: useController.ts  useLive2D.ts  useModeIcons.ts  useNow.ts  useTheme.ts
src/llm/: client.test.ts  client.ts  daily-plan-prompt.ts  prompts.test.ts  prompts.ts  window-history-prompt.ts
src/perception/: idle-detector.ts  poller.test.ts  poller.ts  window-history.ts  window-judge-scheduler.ts
src/recovery/: runtime-state.test.ts  runtime-state.ts
src/slack/: app-profiles.test.ts  app-profiles.ts  categories.ts  detector.test.ts  detector.ts  reminder.test.ts  reminder.ts
src/state/: mode-machine.test.ts  mode-machine.ts  pomodoro.ts  task-store.ts
src/storage/: log-aggregator.test.ts  log-aggregator.ts
src/styles/: variables.css
src/summary/: daily.ts  weekly.ts
(+22 files in other folders)
